# pysandbox

./: .gitignore  README.md
01-fapi/: README.md  pyproject.toml
01-fapi/app/: main.py
02-txt/: README.md  pyproject.toml
02-txt/app/: main.py
03-struct/: README.md  pyproject.toml
03-struct/app/: main.py
04-sum/: README.md  pyproject.toml
04-sum/app/: main.py
05-docnodes/: README.md  pyproject.toml
05-docnodes/app/: main.py
06-embeddings/: pyproject.toml
06-embeddings/app/: main.py
07-qdrant/: README.md  pyproject.toml
07-qdrant/app/: main.py
08-query/: README.md  pyproject.toml
08-query/app/: main.py
09-ingest/: pyproject.toml
09-ingest/app/: main.py
10-docsum/: README.md  pyproject.toml
10-docsum/app/: main.py
11-svc/: README.md  pyproject.toml
11-svc/app/: main.py
11-svc/app/storage/: docstore.json  index_store.json
12-web/: README.md  pyproject.toml
12-web/app/: main.py
12-web/app/storage/: docstore.json  index_store.json
13-rest/: README.md  pyproject.toml
13-rest/app/: main.py
13-rest/app/storage/: docstore.json  index_store.json
13-rest/sh/: idx.sh
14-rag/: README.md  docker-compose.yaml  pyproject.toml
14-rag/sh/: q.sh
